--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "devDependencies": {
     "eslint": "^8.49.0",
-    "prettier": "3.0.3"
+    "prettier": "3.0.3",
+    "typescript": "^5.2.2"
   }
 }
