--- a/packages/slack/package.json
+++ b/packages/slack/package.json
@@ -15,6 +15,11 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "nodemon": "^3.0.1"
   }
 }
