chore: express 설정 및 d.ts 관련 설정

--- a/packages/slack/tsconfig.json
+++ b/packages/slack/tsconfig.json
@@ -1,4 +1,11 @@
 {
+  "ts-node": {
+    "files": true
+  },
+  "files": [
+    "src/types/env.d.ts",
+    "src/types/express.d.ts"
+  ],
   "compilerOptions": {
     "baseUrl": "src",
     "rootDir": "src",
