--- a/packages/slack/package.json
+++ b/packages/slack/package.json
@@ -6,18 +6,6 @@
     "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register dist/app.js",
     "dev": "nodemon --watch src --exec ts-node -r tsconfig-paths/register src/app.ts"
   },
-  "dependencies": {
-    "@types/cors": "^2.8.14",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.6.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-async-errors": "^3.1.1",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2"
-  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
@@ -25,5 +13,22 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "@types/cors": "^2.8.14",
+    "@types/crypto-js": "^4.1.2",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.6.3",
+    "axios": "^1.5.0",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "redis": "^4.6.9",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.2.2",
+    "zod": "^3.22.2"
   }
 }
